<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/tv_rank"
            android:layout_width="80dp"
            android:layout_height="80dp"
            tools:text="1st"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="6dp">

            <TextView
                android:id="@+id/tv_country_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginEnd="60dp"
                android:paddingBottom="4dp"
                android:text="@string/country"
                android:textColor="#000"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:baselineAligned="false">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@mipmap/virus"
                            android:layout_gravity="center"
                            tools:ignore="ContentDescription" />
                        <TextView
                            android:id="@+id/tv_cases"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="2dp"
                            android:text="@string/infected"
                            android:textColor="#000"
                            android:textSize="12sp"
                            android:paddingStart="4dp"
                            android:layout_gravity="center"
                            tools:ignore="RtlSymmetry" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@mipmap/recover"
                            android:layout_gravity="center"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:id="@+id/tv_recovered"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="2dp"
                            android:text="@string/recovered"
                            android:textColor="#000"
                            android:textSize="12sp"
                            android:paddingStart="4dp"
                            android:layout_gravity="center"
                            tools:ignore="RtlSymmetry" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@mipmap/death"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:id="@+id/tv_deaths"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="2dp"
                            android:text="@string/deaths"
                            android:textColor="#000"
                            android:textSize="12sp"
                            android:paddingStart="4dp"
                            android:layout_gravity="center"
                            tools:ignore="RtlSymmetry" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@mipmap/to_virus"
                            android:layout_gravity="center"
                            android:contentDescription="@string/virus_icon" />

                        <TextView
                            android:id="@+id/tv_to_cases"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="2dp"
                            android:text="@string/today_cases"
                            android:textColor="#000"
                            android:textSize="12sp"
                            android:layout_gravity="center"
                            android:paddingStart="4dp"
                            tools:ignore="RtlSymmetry" />

                    </LinearLayout>



                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@mipmap/to_death"
                            tools:ignore="ContentDescription" />
                        <TextView
                            android:id="@+id/tv_to_deaths"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/today_deaths"
                            android:textColor="#000"
                            android:textSize="12sp"
                            android:paddingStart="4dp"
                            android:layout_gravity="center"
                            tools:ignore="RtlSymmetry" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@mipmap/active"
                            tools:ignore="ContentDescription" />
                        <TextView
                            android:id="@+id/tv_active"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="2dp"
                            android:text="@string/active"
                            android:textColor="#000"
                            android:textSize="12sp"
                            android:paddingStart="4dp"
                            android:layout_gravity="center"
                            tools:ignore="RtlSymmetry" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>






</LinearLayout>